background image edits and fix lang menu flicker on narrow

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,2 +1,2 @@
 $textcolor: #FFFEEE;
-$bgcolor: #11141D;
+$bgcolor: #060B16;//#11141D;
