--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@ html {
   box-sizing: border-box;
   color: $textcolor;
 }
+
 body {
   height: 100%;
   margin: 0;
@@ -48,8 +49,8 @@ body {
 }
 
 .textholder {
-  background-color: rgba(17, 20, 29, 0.7);
-  box-shadow: 0px 0px 40px 40px rgba(17, 20, 29, 0.7)
+  background-color: rgba(6, 11, 22, 0.7);
+  box-shadow: 0px 0px 40px 40px rgba(6, 11, 22, 0.7)
 }
 
 a {
@@ -65,7 +66,7 @@ a {
   position: fixed;
   z-index: -1;
   bottom: 0px;
-  right: 0px;
+  left: 0px;
   height: 100vh;
   overflow: hidden;
 }
